# breaker_machines

./: .gitignore  .pre-commit-config.yaml  .release-please-manifest.json  .rubocop.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Gemfile  Makefile  README.md  Rakefile  WHY_OPEN_SOURCE.md  breaker_machines.gemspec  release-please-config.json
.github/workflows/: ci.yml  engines.yml  manual-native-build.yml  release-please.yml  test-multiarch-publish.yml
docs/: ADVANCED_PATTERNS.md  ASYNC.md  ASYNC_STORAGE_EXAMPLES.md  CASCADING_CIRCUITS.md  CIRCUIT_GROUPS.md  CONFIGURATION.md  COORDINATED_STATE_MANAGEMENT.md  DIAGRAMS.md  GETTING_STARTED.md  HORROR_STORIES.md  OBSERVABILITY.md  PERSISTENCE.md  RAILS_INTEGRATION.md  TESTING.md  TESTING_ACTIVESUPPORT.md  TESTING_RSPEC.md
examples/: chrono_machines_integration.rb  starship_systems.rb  webhook_delivery_service.rb
ext/breaker_machines_native/: Cargo.toml  extconf.rb
ext/breaker_machines_native/core/: CHANGELOG.md  Cargo.toml  README.md
ext/breaker_machines_native/core/examples/: basic.rs
ext/breaker_machines_native/core/src/: async_circuit.rs  builder.rs  bulkhead.rs  callbacks.rs  circuit.rs  classifier.rs  errors.rs  lib.rs  storage.rs  time.rs
ext/breaker_machines_native/ffi/: Cargo.toml  extconf.rb
ext/breaker_machines_native/ffi/src/: lib.rs
lib/: breaker_machines.rb
lib/breaker_machines/: async_circuit.rb  async_support.rb  cascading_circuit.rb  circuit.rb  circuit_group.rb  console.rb  coordinated_circuit.rb  dsl.rb  errors.rb  hedged_async_support.rb  hedged_execution.rb  native_extension.rb  native_speedup.rb  registry.rb  storage.rb  types.rb  version.rb
lib/breaker_machines/circuit/: async_state_management.rb  base.rb  callbacks.rb  configuration.rb  coordinated_state_management.rb  execution.rb  hedged_execution.rb  introspection.rb  native.rb  state_callbacks.rb  state_machine_definition.rb  state_management.rb
lib/breaker_machines/dsl/: cascading_circuit_builder.rb  circuit_builder.rb  hedged_builder.rb  parallel_fallback_wrapper.rb
lib/breaker_machines/storage/: backend_state.rb  base.rb  bucket_memory.rb  cache.rb  fallback_chain.rb  memory.rb  memory_support.rb  native.rb  null.rb
lib/breaker_machines_native/: breaker_machines_native.bundle
sig/: README.md  all.rbs  breaker_machines.rbs  manifest.yaml
sig/breaker_machines/: circuit.rbs  console.rbs  dsl.rbs  errors.rbs  interfaces.rbs  registry.rbs  storage.rbs  types.rbs
test/: array_fallback_test.rb  async_circuit_test.rb  atlas_monkey_test.rb  breaker_machines_test.rb  bucket_storage_test.rb  bulkhead_test.rb  cascading_circuit_test.rb  circuit_group_test.rb  circuit_native_test.rb  circuit_test.rb  coordinated_circuit_test.rb  dsl_test.rb  dsl_validation_test.rb  dummy_ships_test.rb  dynamic_circuits_memory_test.rb  dynamic_circuits_test.rb  fiber_safe_test.rb  hedged_execution_test.rb  hedged_fiber_safe_test.rb  inheritance_test.rb  introspection_test.rb  jruby_test_helper.rb  native_extension_test.rb  null_storage_test.rb  registry_test.rb  reset_test.rb  spaceship_test.rb  starfleet_battle_cruiser_test.rb  storage_backend_test.rb  storage_test.rb  test_helper.rb
test/breaker_machines/: half_open_test.rb  rate_threshold_test.rb
test/controllers/: weather_controller_test.rb
test/dummy/: README.md
test/dummy/app/controllers/: circuits_controller.rb  test_controller.rb  weather_controller.rb
test/dummy/app/models/: base_ship.rb  base_spaceship.rb  battle_ship.rb  cargo_ship.rb  corellian_freighter.rb  explorer_ship.rb  fighter.rb  rmns_atlas_monkey.rb  science_vessel.rb  spaceflight_systems.rb  spaceship.rb  starfleet_battle_cruiser.rb  test_cargo_ship.rb
test/dummy/app/services/: external_api_service.rb
test/dummy/config/: application.rb  routes.rb
test/dummy/db/: schema.rb
test/dummy/test/: test_helper.rb
test/integration/: circuit_breaker_test.rb
test/storage/: cache_test.rb  fallback_chain_test.rb  native_test.rb  stress_test.rb
(+2 files in other folders)
