[package]
name = "breaker-machines"
version = "0.12.0"
edition = "2024"
authors = ["Abdelkader Boudih <oss@seuros.com>"]
license = "MIT"
description = "High-performance circuit breaker with fallback support and rate-based thresholds"
repository = "https://github.com/seuros/breaker_machines"
readme = "README.md"
keywords = ["circuit-breaker", "reliability", "fault-tolerance", "state-machine"]
categories = ["concurrency"]

[lib]
crate-type = ["lib"]

[features]
inspect = ["state-machines/inspect"]

[lints]
workspace = true

[dependencies]
state-machines = "0.20"
chrono-machines = "0.3"
