[package]
name = "breaker-machines"
version = "0.14.0"
edition = "2024"
authors = ["Abdelkader Boudih <oss@seuros.com>"]
license = "MIT"
description = "High-performance circuit breaker with fallback support and rate-based thresholds"
repository = "https://github.com/seuros/breaker_machines"
readme = "README.md"
keywords = ["circuit-breaker", "reliability", "fault-tolerance", "state-machine"]
categories = ["concurrency"]

[lib]
crate-type = ["lib"]

[features]
async = ["state-machines/async"]
inspect = ["state-machines/inspect"]

[lints]
workspace = true

[dependencies]
state-machines = "0.20"
chrono-machines = "0.3"

[dev-dependencies]
pollster = "0.4"
