[package]
name = "breaker-machines"
version = "0.14.0"
edition = "2024"
authors = ["Abdelkader Boudih <oss@seuros.com>"]
license = "MIT"
description = "High-performance circuit breaker with fallback support and rate-based thresholds"
repository = "https://github.com/seuros/breaker_machines"
readme = "README.md"
keywords = ["circuit-breaker", "reliability", "fault-tolerance", "state-machine"]
categories = ["concurrency"]

[lib]
crate-type = ["lib"]

[features]
default = ["std"]
std = ["alloc", "state-machines/std", "chrono-machines/std"]
alloc = ["chrono-machines/alloc"]
async = ["std", "state-machines/async", "chrono-machines/async"]
inspect = ["state-machines/inspect"]

[lints]
workspace = true

[dependencies]
state-machines = { version = "0.20", default-features = false }
chrono-machines = { version = "0.4", default-features = false }
hashbrown = "0.15"
spin = { version = "0.12", default-features = false, features = ["rwlock"] }

[dev-dependencies]
pollster = "0.4"
