[package]
name = "breaker_machines_native"
version = "0.5.7"
edition = "2024"
authors = ["Abdelkader Boudih <oss@seuros.com>"]
license = "MIT"
description = "Ruby FFI bindings for breaker-machines circuit breaker"
repository = "https://github.com/seuros/breaker_machines"

[lib]
crate-type = ["cdylib"]

[dependencies]
breaker-machines = { workspace = true }
magnus = { version = "0.8.2", features = ["embed"] }

[build-dependencies]
rb-sys = "0.9"
