[package]
name = "breaker_machines_native"
version = "0.5.9"
edition = "2024"
authors = ["Abdelkader Boudih <oss@seuros.com>"]
license = "MIT"
description = "Ruby FFI bindings for breaker-machines circuit breaker"
repository = "https://github.com/seuros/breaker_machines"

[lib]
crate-type = ["cdylib"]

[lints]
workspace = true

[dependencies]
breaker-machines = { path = "../core", version = "0.12.0" }
magnus = "0.8.2"

[build-dependencies]
rb-sys = "0.9"
